specified height of social buttons to prevent jumping around during load

--- a/css/00000022.css
+++ b/css/00000022.css
@@ -664,8 +664,9 @@ img.screenshot {
 	height: 32px;
 }
 
-.spaceafter{
+.socialbutton{
 	margin-bottom:.5em;
+	height: 24px;
 }
 
 /* news */
